--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,4 +2,7 @@
 <resources>
     <string name="app_name">NwCode Weather</string>
     <string name="saint_petersburg_city">Санкт-Петербург</string>
+    <string name="home_button">На главную</string>
+    <string name="details_button">Детали</string>
+    <string name="forecast_button">Прогноз</string>
 </resources>
